<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
	<string name="app_desc">"Simple, powerful, open-source SSH client."</string>
	<string name="service_desc">"Maintains SSH connections and loaded pubkeys"</string>
	<string name="title_hosts_list">"Hosts"</string>
	<string name="title_pubkey_list">"Pubkeys"</string>
	<string name="title_channels_list">"Channels"</string>
	<string name="title_host_editor">"Edit Host"</string>
	<string name="title_help">"Help"</string>
	<string name="title_colors">"Colors"</string>
	<string name="resolve_connect">"Connect"</string>
	<string name="resolve_entropy">"Gather Entropy"</string>
	<string name="menu_insert">"Add Host"</string>
	<string name="menu_delete">"Delete Host"</string>
	<string name="menu_preferences">"Preferences"</string>
	<string name="help_intro">"Please select a topic below for more information on a particular subject."</string>
	<string name="help_about">"About ConnectBot"</string>
	<string name="help_keyboard">"Keyboard"</string>
	<string name="pubkey_generate">"Generate"</string>
	<string name="pubkey_import">"Import"</string>
	<string name="pubkey_delete">"Delete key"</string>
	<string name="pubkey_gather_entropy">"Gathering Entropy"</string>
	<string name="pubkey_touch_prompt">"Touch this box to gather randomness: %1$d%% done"</string>
	<string name="pubkey_touch_hint">"In order to assure randomness during the key generation, move your finger randomly over the box below."</string>
	<string name="pubkey_generating">"Generating key pair..."</string>
	<string name="pubkey_copy_private">"Copy private key"</string>
	<string name="pubkey_copy_public">"Copy public key"</string>
	<string name="pubkey_list_empty">"Tap \"Menu\" to create"\n"or import key pairs."</string>
	<string name="pubkey_unknown_format">"Unknown format"</string>
	<string name="pubkey_change_password">"Change password"</string>
	<string name="pubkey_list_pick">"Pick from /sdcard"</string>
	<string name="pubkey_import_parse_problem">"Problem parsing imported private key"</string>
	<string name="pubkey_unlock">"Unlock key"</string>
	<string name="pubkey_failed_add">"Bad password for key '%1$s'. Authentication failed."</string>
	<string name="pubkey_memory_load">"Load into memory"</string>
	<string name="pubkey_memory_unload">"Unload from memory"</string>
	<string name="pubkey_load_on_start">"Load key on start"</string>
	<string name="pubkey_confirm_use">"Confirm before use"</string>
	<string name="channel_list_empty">"Tap \"Menu\" to create"\n"channels."</string>
	<string name="channel_edit">"Edit channel"</string>
	<string name="channel_delete">"Delete channel"</string>
	<string name="prompt_nickname">"Nickname:"</string>
	<string name="prompt_nickname_hint_pubkey">"My work key"</string>
	<string name="prompt_uuid">"UUID:"</string>
	<string name="prompt_type">"Type:"</string>
	<string name="prompt_old_password">"Old password:"</string>
	<string name="prompt_password">"Password:"</string>
	<string name="prompt_again">"(again)"</string>
	<string name="prompt_password_can_be_blank">"Note: password can be blank"</string>
	<string name="prompt_bits">"Bits:"</string>
	<string name="prompt_pubkey_password">"Password for key '%1$s'"</string>
	<string name="prompt_allow_agent_to_use_key">"Allow remote host to"\n"use key '%1$s'?"</string>
	<string name="host_verification_failure_warning_header">"WARNING: REMOTE HOST IDENTIFICATION HAS CHANGED!"</string>
	<string name="host_verification_failure_warning">"IT IS POSSIBLE THAT SOMEONE IS DOING SOMETHING NASTY!"\n"Someone could be eavesdropping on you right now (man-in-the-middle attack)!"\n"It is also possible that the host key has just been changed."</string>
	<string name="prompt_host_disconnected">"Host has disconnected."\n"Close session?"</string>
	<string name="prompt_continue_connecting">"Are you sure you want"\n"to continue connecting?"</string>
	<string name="host_authenticity_warning">"The authenticity of host '%1$s' can't be established."</string>
	<string name="host_fingerprint">"Host %1$s key fingerprint is %2$s"</string>
	<string name="alert_passwords_do_not_match_msg">"Passwords do not match!"</string>
	<string name="alert_wrong_password_msg">"Wrong password!"</string>
	<string name="alert_key_corrupted_msg">"Private key appears corrupt!"</string>
	<string name="alert_sdcard_absent">"SD card is not inserted!"</string>
	<string name="button_add">"Add"</string>
	<string name="button_change">"Change"</string>
	<string name="button_generate">"Generate Key"</string>
	<string name="button_resize">"Resize"</string>
	<string name="alert_disconnect_msg">"Connection Lost"</string>
	<string name="msg_copyright">"Copyright &#169; 2007-2008 Kenny Root http://the-b.org/, Jeffrey Sharkey http://jsharkey.org/"</string>
	<string name="pref_emulation_category">"Terminal emulation"</string>
	<string name="pref_emulation_title">"Emulation mode"</string>
	<string name="pref_emulation_summary">"Terminal emulation mode to use for PTY connections"</string>
	<string name="pref_scrollback_title">"Scrollback size"</string>
	<string name="pref_scrollback_summary">"Size of scrollback buffer to keep in memory for each console"</string>
	<string name="pref_ui_category">"User interface"</string>
	<string name="pref_rotation_title">"Rotation mode"</string>
	<string name="pref_rotation_summary">"How to change rotation when keyboard popped in/out"</string>
	<string name="pref_fullscreen_title">"Full screen"</string>
	<string name="pref_fullscreen_summary">"Hide status bar while in console"</string>
	<string name="pref_memkeys_title">"Remember keys in memory"</string>
	<string name="pref_memkeys_summary">"Keep unlocked keys in memory until backend service is terminated"</string>
	<string name="pref_update_title">"Update check"</string>
	<string name="pref_update_summary">"Set the maximum frequency to check for ConnectBot updates"</string>
	<string name="pref_conn_persist_title">"Persist connections"</string>
	<string name="pref_conn_persist_summary">"Force connections to stay connected while in background"</string>
	<string name="pref_keymode_title">"Directory shortcuts"</string>
	<string name="pref_keymode_summary">"Select how to use Alt for '/' and Shift for Tab"</string>
	<string name="pref_camera_title">"Camera shortcut"</string>
	<string name="pref_camera_summary">"Select which shortcut to trigger when the camera button is pushed"</string>
	<string name="pref_keepalive_title">"Keep screen awake"</string>
	<string name="pref_keepalive_summary">"Prevent the screen from turning off when working in a console"</string>
	<string name="pref_wifilock_title">"Keep Wi-Fi active"</string>
	<string name="pref_wifilock_summary">"Prevent Wi-Fi from turning off when a session is active"</string>
	<string name="pref_bumpyarrows_title">"Bumpy arrows"</string>
	<string name="pref_bumpyarrows_summary">"Vibrate when sending arrow keys from trackball; useful for laggy connections"</string>
	<string name="pref_bell_category">"Terminal bell"</string>
	<string name="pref_bell_title">"Audible bell"</string>
	<string name="pref_bell_volume_title">"Bell volume"</string>
	<string name="pref_bell_vibrate_title">"Vibrate on bell"</string>
	<string name="pref_bell_notification_title">"Background notifications"</string>
	<string name="pref_bell_notification_summary">"Send notification when a terminal running in the background sounds a bell."</string>
	<string name="list_keymode_right">"Use right-side keys"</string>
	<string name="list_keymode_left">"Use left-side keys"</string>
	<string name="list_keymode_none">"Disable"</string>
	<string name="list_pubkeyids_none">"Do not use keys"</string>
	<string name="list_pubkeyids_any">"Use any unlocked key"</string>
	<string name="list_update_daily">"Daily"</string>
	<string name="list_update_weekly">"Weekly"</string>
	<string name="list_update_never">"Never"</string>
	<string name="hostpref_nickname_title">"Nickname"</string>
	<string name="hostpref_color_title">"Color category"</string>
	<string name="hostpref_fontsize_title">"Font size (pt)"</string>
	<string name="hostpref_pubkeyid_title">"Use pubkey authentication"</string>
	<string name="hostpref_authagent_title">"Use SSH auth agent"</string>
	<string name="hostpref_postlogin_title">"Post-login automation"</string>
	<string name="hostpref_postlogin_summary">"Commands to run on remote server once authenticated"</string>
	<string name="hostpref_compression_title">"Compression"</string>
	<string name="hostpref_compression_summary">"This may help with slower networks"</string>
	<string name="hostpref_wantsession_title">"Start shell session"</string>
	<string name="hostpref_wantsession_summary">"Disable this preference to only use port forwards"</string>
	<string name="hostpref_stayconnected_title">"Stay connected"</string>
	<string name="hostpref_stayconnected_summary">"Try to reconnect to host if disconnected"</string>
	<string name="hostpref_delkey_title">"DEL Key"</string>
	<string name="hostpref_delkey_summary">"The key code sent when DEL key is pressed"</string>
	<string name="hostpref_encoding_title">"Encoding"</string>
	<string name="hostpref_encoding_summary">"Character encoding for the host"</string>
	<string name="hostpref_connection_category">"Connection settings"</string>
	<string name="hostpref_username_title">"Username"</string>
	<string name="hostpref_hostname_title">"Host"</string>
	<string name="hostpref_port_title">"Port"</string>
	<string name="bind_never">"Never connected"</string>
	<string name="bind_minutes">"%1$s minutes ago"</string>
	<string name="bind_hours">"%1$s hours ago"</string>
	<string name="bind_days">"%1$s days ago"</string>
	<string name="console_copy_done">"Copied %1$d bytes to clipboard"</string>
	<string name="console_copy_start">"Touch and drag"\n"or use directional pad"\n"to select area to copy"</string>
	<string name="console_menu_close">"Close"</string>
	<string name="console_menu_copy">"Copy"</string>
	<string name="console_menu_paste">"Paste"</string>
	<string name="console_menu_portforwards">"Channels"</string>
	<string name="console_menu_resize">"Force Size"</string>
	<string name="console_menu_urlscan">"URL Scan"</string>
	<string name="button_yes">"Yes"</string>
	<string name="button_no">"No"</string>
	<string name="channel_pos">"Create channel"</string>
	<string name="channel_done">"Successfully created channel"</string>
	<string name="channel_problem">"Problem creating channel, maybe the name or UUID is already used?"</string>
	<string name="channel_menu_add">"Add channel"</string>
	<string name="hint_userhost">"user@hostname"</string>
	<string name="list_format_error">"Use the format \"%1$s\""</string>
	<string name="format_username">"username"</string>
	<string name="format_hostname">"hostname"</string>
	<string name="format_port">"port"</string>
	<string name="list_menu_pubkeys">"Manage Pubkeys"</string>
	<string name="list_menu_sortcolor">"Sort by color"</string>
	<string name="list_menu_sortname">"Sort by name"</string>
	<string name="list_menu_settings">"Settings"</string>
	<string name="list_host_disconnect">"Disconnect"</string>
	<string name="list_host_edit">"Edit host"</string>
	<string name="list_host_channels">"Edit channels"</string>
	<string name="list_host_delete">"Delete host"</string>
	<string name="list_host_empty">"Use the quick-connect box"\n"below to connect to a host."</string>
	<string name="list_rotation_default">"Default"</string>
	<string name="list_rotation_land">"Force landscape"</string>
	<string name="list_rotation_port">"Force portrait"</string>
	<string name="list_rotation_auto">"Automatic"</string>
	<string name="list_camera_ctrlaspace">"Ctrl+A then Space"</string>
	<string name="list_camera_ctrla">"Ctrl+A"</string>
	<string name="list_camera_esc">"Esc"</string>
	<string name="list_camera_esc_a">"Esc+A"</string>
	<string name="list_camera_none">"None"</string>
	<string name="list_delkey_backspace">"Backspace"</string>
</resources>