<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * ConnectBot: simple, powerful, open-source SSH client for Android
 * Copyright 2007 Kenny Root, Jeffrey Sharkey
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

	<ListPreference
		android:key="update"
		android:title="@string/pref_update_title"
		android:summary="@string/pref_update_summary"
		android:entries="@array/list_update"
		android:entryValues="@array/list_update_values"
		android:defaultValue="Daily"
		/>

	<CheckBoxPreference
		android:key="connPersist"
		android:title="@string/pref_conn_persist_title"
		android:summary="@string/pref_conn_persist_summary"
		android:defaultValue="true"
		/>

	<PreferenceCategory
		android:title="@string/pref_ui_category">

		<ListPreference
			android:key="rotation"
			android:title="@string/pref_rotation_title"
			android:summary="@string/pref_rotation_summary"
			android:entries="@array/list_rotation"
			android:entryValues="@array/list_rotation_values"
			android:defaultValue="Default"
			/>

		<ListPreference
			android:key="camera"
			android:title="@string/pref_camera_title"
			android:summary="@string/pref_camera_summary"
			android:entries="@array/list_camera"
			android:entryValues="@array/list_camera_values"
			android:defaultValue="Ctrl+A then Space"
			/>

		<CheckBoxPreference
			android:key="keepalive"
			android:title="@string/pref_keepalive_title"
			android:summary="@string/pref_keepalive_summary"
			android:defaultValue="true"
			/>

		<CheckBoxPreference
			android:key="wifilock"
			android:title="@string/pref_wifilock_title"
			android:summary="@string/pref_wifilock_summary"
			android:defaultValue="true"
			/>
	</PreferenceCategory>

	<PreferenceCategory
		android:title="@string/pref_bell_category">

		<CheckBoxPreference
			android:key="bell"
			android:title="@string/pref_bell_title"
			android:defaultValue="true"
			/>

		<net.danopia.protonet.util.VolumePreference
			android:key="bellVolume"
			android:title="@string/pref_bell_volume_title"
			/>

		<CheckBoxPreference
			android:key="bellVibrate"
			android:title="@string/pref_bell_vibrate_title"
			android:defaultValue="true"
			/>

		<CheckBoxPreference
			android:key="bellNotification"
			android:title="@string/pref_bell_notification_title"
			android:summary="@string/pref_bell_notification_summary"
			android:defaultValue="false"
			/>

	</PreferenceCategory>

</PreferenceScreen>
