<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * ConnectBot: simple, powerful, open-source SSH client for Android
 * Copyright 2007 Kenny Root, Jeffrey Sharkey
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

	<EditTextPreference
		android:key="nickname"
		android:title="@string/hostpref_nickname_title"
		android:singleLine="true"
		/>

	<ListPreference
		android:key="color"
		android:title="@string/hostpref_color_title"
		android:entries="@array/list_colors"
		android:entryValues="@array/list_color_values"
		/>

	<EditTextPreference
		android:key="fontsize"
		android:title="@string/hostpref_fontsize_title"
		android:inputType="number"
		android:singleLine="true"
		/>

<!--
	<CheckBoxPreference
		android:key="usekeys"
		android:title="Use SSH keys"
		/>
-->

	<CheckBoxPreference
		android:key="stayconnected"
		android:title="@string/hostpref_stayconnected_title"
		android:summary="@string/hostpref_stayconnected_summary"
		/>

	<ListPreference
		android:key="encoding"
		android:title="@string/hostpref_encoding_title"
		android:summary="@string/hostpref_encoding_summary"
		/>
	
	<PreferenceCategory
		android:title="@string/hostpref_connection_category">
		
		<EditTextPreference
			android:key="username"
			android:title="@string/hostpref_username_title"
			android:singleLine="true"
			/>

		<EditTextPreference
			android:key="hostname"
			android:title="@string/hostpref_hostname_title"
			android:singleLine="true"
			/>

		<EditTextPreference
			android:key="port"
			android:title="@string/hostpref_port_title"
			android:numeric="integer"
			/>

	</PreferenceCategory>

</PreferenceScreen>
